force-app/main/default/objects/DeDupe_Record_Back_Up__c/DeDupe_Record_Back_Up__c.object-meta.xml
<CustomObject>
    <description>Object to hold backup records that have been lost via de duping and merge processes. Functions as a way of tracking which objects where merged and to which winners.</description>
    <label>DeDupe Record Back Up</label>
    <nameField>
        <displayFormat>BR-{0000000}</displayFormat>
        <label>Backup Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeDupe Record Back Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>