force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/De_Dupe_Key_Description__c.field-meta.xml
<CustomField>
    <fullName>De_Dupe_Key_Description__c</fullName>
    <description>Holds the description for how a record was isolated as a duplicate. (Matching Rule)</description>
    <label>De Dupe Key Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>