force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/De_Dupe_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>De_Dupe_Key_Value__c</fullName>
    <description>Value of the de dupe key from the original record (e.g &quot;JohnSmithJsmith@gmail.com&quot; would be derived from a De dupe rule of FirstName + LastName + Email)</description>
    <label>De Dupe Key Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>