force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Original_Object__c.field-meta.xml
<CustomField>
    <fullName>Original_Object__c</fullName>
    <description>Holds information of what object this back up was taken from</description>
    <label>Original Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>