force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Id__c</fullName>
    <description>Id of the record in the org before merge and de dupe</description>
    <label>Original Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>