force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Re_Parented_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Re_Parented_Contacts__c</fullName>
    <description>Record Ids of reparented Contacts on loser records. ONLY POPULATED ON LOSER RECORD</description>
    <label>Re-Parented Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>