force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Re_Parented_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Re_Parented_Opportunities__c</fullName>
    <description>Holds the Ids of Opportunities that were reparented on a loser record. ONLY POPULATED ON LOSER RECORD</description>
    <label>Re-Parented Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>