force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Winner_ID__c.field-meta.xml
<CustomField>
    <fullName>Winner_ID__c</fullName>
    <description>Holds the Id of the &apos;Winner&apos; Record ID in the org that this loser record was merged into. ONLY POPULATED ON LOSER RECORDS</description>
    <label>Winner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>