force-app/main/default/objects/DeDupe_Record_Back_Up__c/fields/Winner_or_Loser__c.field-meta.xml
<CustomField>
    <fullName>Winner_or_Loser__c</fullName>
    <description>Value to represent if this was a &apos;loser&apos; or &apos;winner&apos; during a merge</description>
    <label>Winner or Loser</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Loser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>