force-app/main/default/objects/DeDupe_Record_Back_Up__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Original_Object__c</columns>
    <columns>De_Dupe_Key_Description__c</columns>
    <columns>De_Dupe_Key_Value__c</columns>
    <columns>Winner_or_Loser__c</columns>
    <columns>Original_Record_Id__c</columns>
    <columns>Winner_ID__c</columns>
    <columns>Re_Parented_Opportunities__c</columns>
    <columns>Re_Parented_Contacts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>